[package]
name = "wasmium-hash-id"
version = "0.1.0"
edition = "2021"
authors = ["Wasmium Network Developers <hq@wasmium.network>"]
license = "Apache-2.0"
homepage = "https://wasmium.network"
repository = "https://github.com/wasmium/WasmiumHashID"
description = "A way to store Crypotgraphically Secure ID's in a chronological manner using TAI64N for time and Blake3 as the secure hash."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
tai64 = { git = "https://github.com/wasmium/formats.git", features = [
    "borsh_encoding",
] }
